// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyCollectionMessage should render EmptyCollectionMessage component with message for logged in user 1`] = `
<div>
  <div
    class="px-4 max-w-screen-xl pt-10 pb-10 py-4 bg-white dark:bg-gray-800 shadow-md w-full rounded-lg mb-4 border border-gray-300 dark:border-gray-600 text-center"
  >
    <svg
      aria-hidden="true"
      class="mx-auto w-16 h-16 mb-4 text-gray-400"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <p
      class="text-xl mb-4"
    >
      Ta kolekcja jest pusta.
    </p>
    <p
      class="text-md"
    >
      <button
        class="text-blue-600 cursor-pointer bg-transparent border-0 p-0"
        type="button"
      >
        Dodawaj nowe rekordy
      </button>
       
      ręcznie lub
       
      <button
        class="text-blue-600 cursor-pointer bg-transparent border-0 p-0"
        type="button"
      >
        zaimportuj
      </button>
       
      dane z pliku Excel, aby rozpocząć organizację swojej kolekcji.
    </p>
  </div>
</div>
`;

exports[`EmptyCollectionMessage should render EmptyCollectionMessage component with message for not logged in user 1`] = `
<div>
  <div
    class="px-4 max-w-screen-xl pt-10 pb-10 py-4 bg-white dark:bg-gray-800 shadow-md w-full rounded-lg mb-4 border border-gray-300 dark:border-gray-600 text-center"
  >
    <svg
      aria-hidden="true"
      class="mx-auto w-16 h-16 mb-4 text-gray-400"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
    <p
      class="text-xl mb-4"
    >
      Ta kolekcja jest pusta.
    </p>
    <p
      class="text-md"
    >
      <span>
        <button
          class="text-blue-600 cursor-pointer bg-transparent border-0 p-0"
          type="button"
        >
          Zaloguj się
        </button>
         
        aby móc dodawać rekordy. Nie masz konta? Poproś administratora systemu o utworzenie go dla Ciebie.
      </span>
    </p>
  </div>
</div>
`;
